--- a/titanic-classification.ipynb
+++ b/titanic-classification.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "860d903c",
+   "id": "2b441547",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "ecab9a9a",
+   "id": "7689d4da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "7ca65de0",
+   "id": "9c06d7e8",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "46ffe40f",
+   "id": "f192d801",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "2e07561e",
+   "id": "44b9eb85",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "333f1ff5",
+   "id": "63122155",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "136ba994",
+   "id": "63bf0304",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "91f2a00e",
+   "id": "b3b76f2b",
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "11772673",
+   "id": "24695013",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "11869a62",
+   "id": "9d0b4ce6",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "10a75aed",
+   "id": "55ab9c43",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "2ca5a159",
+   "id": "a5b0c5e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "ed17fcfe",
+   "id": "e8d183c5",
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "e1874ee9",
+   "id": "fd7e0954",
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "1960bc89",
+   "id": "f409cdea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "9abe841d",
+   "id": "848a9aab",
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "1f3425cb",
+   "id": "eb24bb0d",
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1339,8 @@
     }
    ],
    "source": [
-    "#데이터 형식을 통일해야 heat map 분석을 할 수 있는건가?\n",
+    "#correlation 분석은 float, int 끼리만 가능함. object와 float, object와 int끼리는 correlation 분석이 불가능함. Name과 ticket의 전처리 방벙\n",
+    "#에 대해 서 더 고민해보자! ticket의 전처리는 위에서 동작한 코드가 제대로 동작하기만 하면 해결이 될 것 같다.\n",
     "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -1356,7 +1357,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "fd8f2f93",
+   "id": "ad37f3f4",
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "eb4696dc",
+   "id": "9e122a5c",
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "8536f0d8",
+   "id": "21b60e0e",
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "fc9d07f8",
+   "id": "c9c62ccc",
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "ad64af5e",
+   "id": "52c926b8",
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "5898dea6",
+   "id": "93e2de4c",
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1525,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "377edc9c",
+   "id": "776a6914",
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "b206d389",
+   "id": "9f066c89",
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4069c662",
+   "id": "68a2f52d",
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1608,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ab18ffaa",
+   "id": "0e47c9d4",
    "metadata": {},
    "outputs": [
     {
@@ -1626,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feb1729c",
+   "id": "47d92816",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1634,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "961f38a0",
+   "id": "d68a0bc4",
    "metadata": {},
    "outputs": [],
    "source": []
